--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>100 Days of Programming</h1>
-        <p>Showcasing my journey through 100 days of coding projects.</p>
+        <p>100 Day Challenge Provided By ChatGPT, Everyday The Projects Increase In Difficulty!</p>
     </header>
 
     <section class="projects">
